Fix object title not showing when navigating back to format data tab

--- a/public/stylesheets/views/sidebar-menu.css
+++ b/public/stylesheets/views/sidebar-menu.css
@@ -49,7 +49,7 @@
     /*background-color: #272727;*/
     /*box-shadow: 0 2px 4px rgba(0,0,0,.2);*/
     /*text-transform: uppercase;*/
-    letter-spacing: 2px;
+    /*letter-spacing: 2px;*/
     font-size: 1.1em;
     line-height: 1em;
 
